<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/testImagenes"
    tools:context="com.google.android.gms.example.exercisesforthebrain.TestImagenActivity">

    <ImageView
        android:id="@+id/imageViewBarId"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@android:color/transparent"
        android:focusable="true"
        android:scaleType="centerCrop"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/horizontalimageforapp"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textViewSubtitleId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:focusable="true"
        android:nextFocusDown="@+id/textViewDescriptionExerId"
        android:nextFocusLeft="@+id/textViewDescriptionExerId"
        android:nextFocusRight="@+id/textViewDescriptionExerId"
        android:text="@string/subtitle"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewBarId"
        app:layout_constraintLeft_toLeftOf="parent" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarTestStartAlphaId"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:elevation="4dp"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </android.support.v7.widget.Toolbar>

    <Button
        android:id="@+id/buttonStartId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@color/colorfabbuttondayactivity"
        android:contentDescription="@string/content_description_start_imagenTest"
        android:focusable="true"
        android:nextFocusDown="@id/textViewSubtitleId"
        android:nextFocusLeft="@+id/buttonPerformanceImageId"
        android:nextFocusRight="@+id/buttonPerformanceImageId"
        android:nextFocusUp="@+id/gridview"
        android:text="@string/start"
        android:textColor="@color/colorWhite"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonPerformanceImageId"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textViewDescriptionExerId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:elevation="4dp"
        android:focusable="true"
        android:nextFocusDown="@+id/textViewCountDownId"
        android:nextFocusLeft="@+id/textViewCountDownId"
        android:nextFocusRight="@+id/textViewCountDownId"
        android:nextFocusUp="@+id/textViewSubtitleId"
        android:paddingEnd="@dimen/titleAppBottMar"
        android:paddingStart="@dimen/titleAppBottMar"
        android:text="@string/descriptionTestImagen"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewBarId" />

    <GridView
        android:id="@+id/gridview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/gridviewborder"
        android:columnWidth="70dp"
        android:contentDescription="@string/content_description_imagens"
        android:descendantFocusability="afterDescendants"
        android:elevation="24dp"
        android:fadeScrollbars="true"
        android:focusable="true"
        android:gravity="center"
        android:horizontalSpacing="8dp"
        android:listSelector="@drawable/focusgrid"
        android:nextFocusDown="@id/buttonPerformanceImageId"
        android:nextFocusLeft="@id/buttonPerformanceImageId"
        android:nextFocusRight="@id/buttonPerformanceImageId"
        android:nextFocusUp="@id/textViewCountDownId"
        android:numColumns="auto_fit"
        android:scrollbarFadeDuration="0"
        android:scrollbarSize="3dp"
        android:scrollbarThumbVertical="@color/colorGrey"
        android:scrollbars="vertical"
        android:stretchMode="columnWidth"
        android:verticalSpacing="8dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonPerformanceImageId"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarTestStartAlphaId" />

    <Button
        android:id="@+id/buttonPerformanceImageId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:background="@color/colorfabbuttondayactivity"
        android:contentDescription="@string/content_description_performance_imageExercise"
        android:focusable="true"
        android:nextFocusDown="@id/textViewSubtitleId"
        android:nextFocusLeft="@id/buttonStartId"
        android:nextFocusRight="@id/buttonStartId"
        android:nextFocusUp="@id/gridview"
        android:paddingEnd="6dp"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:paddingStart="6dp"
        android:text="@string/performance"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>
